[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
clap = { version = "3.2.8", features = ["derive"] }
tempfile = "3.0.7"
walkdir = "2.2.7"
failure = "0.1.8" 